--- a/apps/ledger-live-desktop/static/i18n/ru/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ru/app.json
@@ -32,7 +32,7 @@
       },
       "banner" : {
         "title" : "Исследуйте наш Каталог приложений",
-        "description" : "Мы делаем всё возможное, чтобы предоставить доступ к миру DeFi, NFT и другому. Вы сможете безопасно пользоваться ими прямо в Ledger Live!"
+        "description" : "Мы стараемся, чтобы у вас был безопасный доступ к миру DeFi, NFT и прочему. Вы можете пользоваться этим прямо в Ledger Live!"
       },
       "twitterBanner" : {
         "description" : "Воспользуйтесь хэштегом и расскажите нам, какие услуги вы бы хотели видеть в Ledger Live",
@@ -144,7 +144,7 @@
       "REVEAL" : "Показано",
       "DELEGATE" : "Делегировано",
       "REDELEGATE" : "Переделегировано",
-      "UNDELEGATE" : "Не делегировано",
+      "UNDELEGATE" : "Отозвано",
       "SUPPLY" : "Депонировано",
       "REDEEM" : "Выведено",
       "APPROVE" : "Подтверждено",
@@ -535,7 +535,7 @@
     },
     "resetThirdPartyDataModal" : {
       "title" : "Удалите данные посредников",
-      "subtitle" : "Удалите данные посредников. Чтобы получить доступ к услугам наших партнёров, вам может потребоваться заново пройти KYC и/или войти.",
+      "subtitle" : "Удалите данные посредников. Чтобы пользоваться услугами сторонних операторов, может потребоваться заново пройти KYC и/или авторизоваться.",
       "cta" : "Подтвердить"
     },
     "modal" : {
@@ -742,11 +742,11 @@
       "moreInfo" : "Подробнее...",
       "cardTitle" : "Powered by {{team}}",
       "drawer" : {
-        "title" : "Интеграция {{family}}",
-        "subTitle" : "Интеграция {{family}} выполнена командой {{team}}",
+        "title" : "Интеграция c {{family}}",
+        "subTitle" : "Интеграция c {{family}} выполнена командой {{team}}",
         "description" : "Ledger Live – это платформа с открытым исходным кодом.",
-        "description2" : "Разработчики из любой точки мира могут интегрироваться в наше приложение Ledger Live",
-        "description3" : "Эта интеграция проведена {{team}} в сотрудничестве с Ledger"
+        "description2" : "Разработчики из любой точки мира могут интегрировать своё приложение в Ledger Live.",
+        "description3" : "Эта интеграция проведена {{team}} в сотрудничестве с Ledger."
       }
     },
     "lastOperations" : "Последние операции",
@@ -886,7 +886,7 @@
         "accounts" : "Счёт",
         "amountSupplied" : "Открытые займы",
         "amountSuppliedTooltip" : "Сумма, кредитованная в сеть",
-        "accruedInterests" : "Начисленные проценты",
+        "accruedInterests" : "Начислено",
         "accruedInterestsTooltip" : "Проценты с кредитования",
         "status" : "Состояние",
         "actions" : "Действия"
@@ -1268,7 +1268,7 @@
     },
     "buyCrypto" : {
       "title" : "Покупка криптовалюты",
-      "description" : "Покупайте криптовалюты через наших партнёров и получайте их прямо на счёт в Ledger",
+      "description" : "Покупайте криптовалюты через сторонних операторов и получайте их на счёт в Ledger",
       "cta" : "Купить"
     },
     "familyPack" : {
@@ -1282,7 +1282,7 @@
     },
     "sell" : {
       "title" : "Продажа криптовалюты",
-      "description" : "Продавайте биткойны через наших партнёров прямо в Ledger Live"
+      "description" : "Продавайте BTC через сторонних операторов прямо в Ledger Live"
     },
     "stakeAlgorand" : {
       "title" : "Стейкинг ALGORAND",
@@ -1290,7 +1290,7 @@
     },
     "swap" : {
       "title" : "Обмен криптовалют",
-      "description" : "Обменивайте одну криптовалюту на другую в Ledger Live посредством наших партнёров"
+      "description" : "Обменивайте криптовалюты между собой в Ledger Live через сторонних операторов"
     },
     "lending" : {
       "title" : "Кредиты в криптовалюте",
@@ -1399,7 +1399,7 @@
   "market" : {
     "title" : "Рынок",
     "currency" : "Валюта",
-    "rangeLabel" : "Время",
+    "rangeLabel" : "Период",
     "goBack" : "Назад",
     "filters" : {
       "title" : "Фильтры",
@@ -1414,11 +1414,11 @@
       "crypto" : "Криптовалюты",
       "price" : "Цена",
       "change" : "Изменение",
-      "marketCap" : "Рын. капитализация",
+      "marketCap" : "Капитализация",
       "last7d" : "За 7 дней"
     },
     "detailsPage" : {
-      "priceStatistics" : "Статистика цен",
+      "priceStatistics" : "Статистика цены",
       "tradingVolume" : "Торговый объём",
       "24hLowHight" : "Макс/Мин (24 часа)",
       "7dLowHigh" : "Мин/Макс (Неделя)",
@@ -1440,9 +1440,9 @@
       "1M_label" : "1М",
       "1Y_label" : "1Г",
       "1h" : "1ч",
-      "24h" : "24ч",
-      "7d" : "7дн",
-      "30d" : "30дн",
+      "24h" : "24Ч",
+      "7d" : "7Д",
+      "30d" : "30Д",
       "1y" : "1Г",
       "1H_selectorLabel" : "Последний час",
       "1D_selectorLabel" : "Последние 24 часа",
@@ -1672,7 +1672,7 @@
       "redelegatedFrom" : "Повторно делегировано из",
       "redelegatedTo" : "Повторно делегировано",
       "redelegatedAmount" : "Переделегированная сумма",
-      "undelegated" : "Не делегировано",
+      "undelegated" : "Отозвано",
       "undelegatedFrom" : "Отозваны с",
       "undelegatedAmount" : "Отозванная сумма",
       "rewardFrom" : "Вознаграждение от",
@@ -1785,7 +1785,7 @@
         "title" : "Сортировка",
         "name_asc" : "Название А-Я",
         "name_desc" : "Название Я-А",
-        "marketcap_desc" : "Рын. капитализация"
+        "marketcap_desc" : "Капитализация"
       },
       "installSuccess" : {
         "title" : "Приложение успешно установлено. Теперь можно создавать счета {{app}}",
@@ -2007,7 +2007,7 @@
       "castVotes" : {
         "max" : "МАКС.",
         "title" : "Голосовать",
-        "search" : "Поиск по имени или адресу...",
+        "search" : "Поиск по названию или адресу...",
         "totalVotes" : "Всего голосов: {{total}}",
         "selected" : "Выбрано: {{total}}",
         "maxSelected" : "Выбрано макс.: {{total}}",
@@ -2049,7 +2049,7 @@
     "steps" : {
       "chooseAccount" : {
         "title" : "Счёт",
-        "label" : "Счёт для зачисления средств",
+        "label" : "Счёт для зачисления",
         "parentAccount" : "1. Выберите счёт {{currencyName}}",
         "token" : "2. Выберите токен",
         "verifyTokenType" : "Проверьте, чтобы <0>{{token}}</0> был токеном <0>{{tokenType}}</0>. Любой другой криптоактив, отправленный на счёт {{currency}}, может быть потерян.",
@@ -2088,15 +2088,15 @@
           "description" : "Стейкайте ATOM с помощью надёжного валидатора Ledger. Монеты остаются вашими, а их безопасность обеспечивает Ledger."
         },
         "osmo" : {
-          "title" : "Приумножайте OSMO. Стейкайте с валидатором «Ledger by Figment».",
+          "title" : "Приумножайте OSMO. Стейкайте с валидатором «Ledger by Figment»",
           "description" : "Стейкайте OSMO через валидатора «Ledger by Figment». У него самые низкие комиссии и страховка от слэшинга!"
         },
         "solana" : {
-          "title" : "Приумножайте SOL. Стейкайте с помощью валидатора «Ledger by Figment».",
+          "title" : "Приумножайте SOL. Стейкайте с помощью валидатора «Ledger by Figment»",
           "description" : "Стейкайте SOL с помощью валидатора «Ledger by Figment» Монеты остаются вашими, а их безопасность обеспечивает Ledger."
         },
         "celo" : {
-          "title" : "Приумножайте CELO. Стейкайте с помощью валидатора «Ledger by Figment».",
+          "title" : "Приумножайте CELO. Стейкайте с помощью валидатора «Ledger by Figment»",
           "description" : "Стейкайте CELO с помощью валидатора «Ledger by Figment» Он обладает страховкой от слэшинга и бонусом в виде бескомпромиссной безопасности Ledger."
         }
       }
@@ -2113,7 +2113,7 @@
       },
       "amount" : {
         "title" : "Сумма",
-        "banner" : "Сколько можно отправить",
+        "banner" : "Вы можете отправить",
         "fees" : "Макс. ориентировочная комиссия",
         "standard" : "Обычная",
         "advanced" : "Дополнительно",
@@ -2197,7 +2197,7 @@
     "no" : "Мне не хочется"
   },
   "deviceLocalization" : {
-    "language" : "Язык интерфейса",
+    "language" : "Язык устройства",
     "deviceLanguage" : "Язык устройства",
     "changeLanguage" : "Поменять язык",
     "changeDeviceLanguage" : "Поменять язык устройства?",
@@ -2920,7 +2920,7 @@
             "compoundDescription" : "Вознаграждения будут добавлены к делегированной сумме",
             "claimDescription" : "Вознаграждения будут зачислены на баланс",
             "compoundInfo" : "Вы заработали <0>{{amount}}</0>. После нажатия «Продолжить» вознаграждения будут получены и автоматически делегированы тому же валидатору.",
-            "claimInfo" : "Вы заработали <0>{{amount}}</0> от следующего валидатора. После нажатия кнопки «Продолжить» вознаграждения будут получены и автоматически зачислены на ваш баланс.",
+            "claimInfo" : "Вы заработали <0>{{amount}}</0>. После нажатия кнопки «Продолжить» вознаграждения будут получены и автоматически зачислены на ваш баланс.",
             "selectLabel" : "Выберите делегирование"
           },
           "connectDevice" : {
@@ -3384,11 +3384,11 @@
       },
       "deactivate" : {
         "flow" : {
-          "title" : "Отзыв делегирования",
+          "title" : "Отозвать",
           "steps" : {
             "confirmation" : {
               "success" : {
-                "title" : "Вы успешно отозвали делегирование."
+                "title" : "Вы успешно отозвали делегирование"
               }
             }
           }
@@ -3413,7 +3413,7 @@
     "durationDays" : "{{count}} дн.",
     "durationDays_plural" : "{{count}} дн.",
     "howItWorks" : "Как работает делегирование",
-    "delegationEarn" : "Теперь вы можете получать вознаграждение за стейкинг {{name}}, делегируя свои активы.",
+    "delegationEarn" : "Вы можете получать вознаграждение за стейкинг, если делегируете активы.",
     "earnRewards" : "Получить вознаграждения",
     "overdelegated" : "Превышен лимит делегирования",
     "status" : "Статус",
@@ -3698,7 +3698,7 @@
       "button" : "Исправить"
     },
     "exportLogs" : {
-      "title" : "Сохранение логов",
+      "title" : "Сохранить логи",
       "desc" : "Загрузка логов Ledger Live может помочь для устранения неполадок.",
       "btn" : "Сохранить"
     },
@@ -3960,7 +3960,7 @@
           },
           "3" : {
             "title" : "Ввести фразу восстановления на новом устройстве",
-            "description" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano!"
+            "description" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano."
           }
         }
       },
@@ -4208,7 +4208,7 @@
           "genuineCheck" : {
             "success" : {
               "title" : "Отлично!",
-              "desc" : "Подлинность вашего {{deviceName}} подтверждена. Теперь вы можете использовать его в Ledger Live."
+              "desc" : "Ваш кошелёк Ledger {{deviceName}} подлинный. Теперь его можно использовать в Ledger Live."
             },
             "buttons" : {
               "next" : "Продолжить",
@@ -4825,7 +4825,7 @@
       "install" : {
         "title" : "Прервать установку приложения?",
         "description" : "При выходе из вкладки «Мой Ledger» установка приложения прервётся. Дождитесь завершения, чтобы установить приложения из очереди.",
-        "stay" : "Подождать"
+        "stay" : "Дождаться"
       },
       "uninstall" : {
         "title" : "Прервать удаление приложения?",
@@ -4835,7 +4835,7 @@
       "update" : {
         "title" : "Прервать обновление приложения?",
         "description" : "При выходе из вкладки «Мой Ledger» обновление приложения прервётся.",
-        "stay" : "Завершить обновления"
+        "stay" : "Дождаться"
       },
       "quit" : "Закрыть «Мой Ledger»"
     },
@@ -4844,8 +4844,8 @@
       "description" : "Удаляйте приложения Bitcoin или Ethereum в последнюю очередь"
     },
     "NetworkDown" : {
-      "title" : "Похоже, не работает Интернет",
-      "description" : "Проверьте подключение к Интернету."
+      "title" : "Похоже, отсутствует подключение",
+      "description" : "Попробуйте проверить подключение к интернету."
     },
     "NoAddressesFound" : {
       "title" : "К сожалению, счета не найдены",
