--- a/apps/ledger-live-desktop/static/i18n/ru/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ru/app.json
@@ -32,7 +32,7 @@
       },
       "banner" : {
         "title" : "Исследуйте наш Каталог приложений",
-        "description" : "Мы делаем всё возможное, чтобы предоставить доступ к миру DeFi, NFT и другому. Вы сможете безопасно пользоваться ими прямо в Ledger Live!"
+        "description" : "Мы стараемся, чтобы у вас был безопасный доступ к миру DeFi, NFT и прочему. Вы можете пользоваться этим прямо в Ledger Live!"
       },
       "twitterBanner" : {
         "description" : "Воспользуйтесь хэштегом и расскажите нам, какие услуги вы бы хотели видеть в Ledger Live",
@@ -145,7 +145,7 @@
       "REVEAL" : "Показано",
       "DELEGATE" : "Делегировано",
       "REDELEGATE" : "Переделегировано",
-      "UNDELEGATE" : "Не делегировано",
+      "UNDELEGATE" : "Отозвано",
       "SUPPLY" : "Депонировано",
       "REDEEM" : "Выведено",
       "APPROVE" : "Подтверждено",
@@ -225,15 +225,10 @@
     "tooltip" : "В избранное"
   },
   "bridge" : {
-    "modalTitle" : "Откройте Device Bridge",
-    "openHeader" : "Открывайте доступ к счетам на устройстве через WebSocket",
-    "openDescription" : "Открытие моста даёт сторонним приложениям доступ ко всем вашим счетам.",
-    "openedHeader" : "Мост для {{appName}} открыт",
-    "openedDescription" : "Теперь вы можете использовать свой счёт {{appName}} в стороннем веб-приложении через WebSocket.",
-    "completeHeader" : "Сеанс моста завершён",
-    "completeDescription" : "Мост WebSocket закрыт.",
-    "openButton" : "Открыть",
-    "disconnectButton" : "Отключить"
+    "modalTitle" : "Device Bridge",
+    "openHeader" : "Device Bridge больше недоступен",
+    "openDescription" : "Настройте браузерное расширение кошелька для использования WebHID вместо Ledger Live.",
+    "closeButton" : "Закрыть"
   },
   "swap2" : {
     "title" : "Обмен",
@@ -541,7 +536,7 @@
     },
     "resetThirdPartyDataModal" : {
       "title" : "Удалите данные посредников",
-      "subtitle" : "Удалите данные посредников. Чтобы получить доступ к услугам наших партнёров, вам может потребоваться заново пройти KYC и/или войти.",
+      "subtitle" : "Удалите данные посредников. Чтобы пользоваться услугами сторонних операторов, может потребоваться заново пройти KYC и/или авторизоваться.",
       "cta" : "Подтвердить"
     },
     "modal" : {
@@ -770,11 +765,11 @@
       "moreInfo" : "Подробнее...",
       "cardTitle" : "Powered by {{team}}",
       "drawer" : {
-        "title" : "Интеграция {{family}}",
-        "subTitle" : "Интеграция {{family}} выполнена командой {{team}}",
+        "title" : "Интеграция c {{family}}",
+        "subTitle" : "Интеграция c {{family}} выполнена командой {{team}}",
         "description" : "Ledger Live – это платформа с открытым исходным кодом.",
-        "description2" : "Разработчики из любой точки мира могут интегрироваться в наше приложение Ledger Live",
-        "description3" : "Эта интеграция проведена {{team}} в сотрудничестве с Ledger"
+        "description2" : "Разработчики из любой точки мира могут интегрировать своё приложение в Ledger Live.",
+        "description3" : "Эта интеграция проведена {{team}} в сотрудничестве с Ledger."
       }
     },
     "lastOperations" : "Последние операции",
@@ -914,7 +909,7 @@
         "accounts" : "Счёт",
         "amountSupplied" : "Открытые займы",
         "amountSuppliedTooltip" : "Сумма, кредитованная в сеть",
-        "accruedInterests" : "Начисленные проценты",
+        "accruedInterests" : "Начислено",
         "accruedInterestsTooltip" : "Проценты с кредитования",
         "status" : "Состояние",
         "actions" : "Действия"
@@ -1300,7 +1295,7 @@
     },
     "buyCrypto" : {
       "title" : "Покупка криптовалюты",
-      "description" : "Покупайте криптовалюты через наших партнёров и получайте их прямо на счёт в Ledger",
+      "description" : "Покупайте криптовалюты через сторонних операторов и получайте их на счёт в Ledger",
       "cta" : "Купить"
     },
     "familyPack" : {
@@ -1314,7 +1309,7 @@
     },
     "sell" : {
       "title" : "Продажа криптовалюты",
-      "description" : "Продавайте биткойны через наших партнёров прямо в Ledger Live"
+      "description" : "Продавайте BTC через сторонних операторов прямо в Ledger Live"
     },
     "stakeAlgorand" : {
       "title" : "Стейкинг ALGORAND",
@@ -1322,7 +1317,7 @@
     },
     "swap" : {
       "title" : "Обмен криптовалют",
-      "description" : "Обменивайте одну криптовалюту на другую в Ledger Live посредством наших партнёров"
+      "description" : "Обменивайте криптовалюты между собой в Ledger Live через сторонних операторов"
     },
     "lending" : {
       "title" : "Кредиты в криптовалюте",
@@ -1399,7 +1394,7 @@
         "label" : "Популярно"
       },
       "earn" : {
-        "title" : "Приумножить",
+        "title" : "Стейкинг",
         "description" : "Приумножайте криптовалюты вместе с Ledger"
       }
     }
@@ -1446,7 +1441,7 @@
   "market" : {
     "title" : "Рынок",
     "currency" : "Валюта",
-    "rangeLabel" : "Время",
+    "rangeLabel" : "Период",
     "goBack" : "Назад",
     "filters" : {
       "title" : "Фильтры",
@@ -1461,11 +1456,11 @@
       "crypto" : "Криптовалюты",
       "price" : "Цена",
       "change" : "Изменение",
-      "marketCap" : "Рын. капитализация",
+      "marketCap" : "Капитализация",
       "last7d" : "За 7 дней"
     },
     "detailsPage" : {
-      "priceStatistics" : "Статистика цен",
+      "priceStatistics" : "Статистика цены",
       "tradingVolume" : "Торговый объём",
       "24hLowHight" : "Макс/Мин (24 часа)",
       "7dLowHigh" : "Мин/Макс (Неделя)",
@@ -1487,9 +1482,9 @@
       "1M_label" : "1М",
       "1Y_label" : "1Г",
       "1h" : "1ч",
-      "24h" : "24ч",
-      "7d" : "7дн",
-      "30d" : "30дн",
+      "24h" : "24Ч",
+      "7d" : "7Д",
+      "30d" : "30Д",
       "1y" : "1Г",
       "1H_selectorLabel" : "Последний час",
       "1D_selectorLabel" : "Последние 24 часа",
@@ -1719,7 +1714,7 @@
       "redelegatedFrom" : "Повторно делегировано из",
       "redelegatedTo" : "Повторно делегировано",
       "redelegatedAmount" : "Переделегированная сумма",
-      "undelegated" : "Не делегировано",
+      "undelegated" : "Отозвано",
       "undelegatedFrom" : "Отозваны с",
       "undelegatedAmount" : "Отозванная сумма",
       "withdrawnFrom" : "Выведено из",
@@ -1834,7 +1829,7 @@
         "title" : "Сортировка",
         "name_asc" : "Название А-Я",
         "name_desc" : "Название Я-А",
-        "marketcap_desc" : "Рын. капитализация"
+        "marketcap_desc" : "Капитализация"
       },
       "installSuccess" : {
         "title" : "Приложение успешно установлено. Теперь можно создавать счета {{app}}",
@@ -2056,7 +2051,7 @@
       "castVotes" : {
         "max" : "МАКС.",
         "title" : "Голосовать",
-        "search" : "Поиск по имени или адресу...",
+        "search" : "Поиск по названию или адресу...",
         "totalVotes" : "Всего голосов: {{total}}",
         "selected" : "Выбрано: {{total}}",
         "maxSelected" : "Выбрано макс.: {{total}}",
@@ -2129,15 +2124,15 @@
           "description" : "Стейкайте ATOM с помощью надёжного валидатора Ledger. Монеты остаются вашими, а их безопасность обеспечивает Ledger."
         },
         "osmo" : {
-          "title" : "Приумножайте OSMO. Стейкайте с валидатором «Ledger by Figment».",
+          "title" : "Приумножайте OSMO. Стейкайте с валидатором «Ledger by Figment»",
           "description" : "Стейкайте OSMO через валидатора «Ledger by Figment». У него самые низкие комиссии и страховка от слэшинга!"
         },
         "solana" : {
-          "title" : "Приумножайте SOL. Стейкайте с помощью валидатора «Ledger by Figment».",
+          "title" : "Приумножайте SOL. Стейкайте с помощью валидатора «Ledger by Figment»",
           "description" : "Стейкайте SOL с помощью валидатора «Ledger by Figment» Монеты остаются вашими, а их безопасность обеспечивает Ledger."
         },
         "celo" : {
-          "title" : "Приумножайте CELO. Стейкайте с помощью валидатора «Ledger by Figment».",
+          "title" : "Приумножайте CELO. Стейкайте с помощью валидатора «Ledger by Figment»",
           "description" : "Стейкайте CELO с помощью валидатора «Ledger by Figment» Он обладает страховкой от слэшинга и бонусом в виде бескомпромиссной безопасности Ledger."
         }
       }
@@ -2154,7 +2149,7 @@
       },
       "amount" : {
         "title" : "Сумма",
-        "banner" : "Сколько можно отправить",
+        "banner" : "Вы можете отправить",
         "fees" : "Макс. ориентировочная комиссия",
         "standard" : "Обычная",
         "advanced" : "Дополнительно",
@@ -2238,7 +2233,7 @@
     "no" : "Мне не хочется"
   },
   "deviceLocalization" : {
-    "language" : "Язык интерфейса",
+    "language" : "Язык устройства",
     "deviceLanguage" : "Язык устройства",
     "changeLanguage" : "Поменять язык",
     "changeDeviceLanguage" : "Поменять язык устройства?",
@@ -3445,11 +3440,11 @@
       },
       "deactivate" : {
         "flow" : {
-          "title" : "Отзыв делегирования",
+          "title" : "Отозвать",
           "steps" : {
             "confirmation" : {
               "success" : {
-                "title" : "Вы успешно отозвали делегирование."
+                "title" : "Вы успешно отозвали делегирование"
               }
             }
           }
@@ -3623,7 +3618,7 @@
     "durationDays" : "{{count}} дн.",
     "durationDays_plural" : "{{count}} дн.",
     "howItWorks" : "Как работает делегирование",
-    "delegationEarn" : "Теперь вы можете получать вознаграждение за стейкинг {{name}}, делегируя свои активы.",
+    "delegationEarn" : "Вы можете получать вознаграждение за стейкинг, если делегируете активы.",
     "earnRewards" : "Получить вознаграждения",
     "overdelegated" : "Превышен лимит делегирования",
     "status" : "Статус",
@@ -3913,7 +3908,7 @@
       "button" : "Исправить"
     },
     "exportLogs" : {
-      "title" : "Сохранение логов",
+      "title" : "Сохранить логи",
       "desc" : "Загрузка логов Ledger Live может помочь для устранения неполадок.",
       "btn" : "Сохранить"
     },
@@ -4175,7 +4170,7 @@
           },
           "3" : {
             "title" : "Ввести фразу восстановления на новом устройстве",
-            "description" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano!"
+            "description" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano."
           }
         }
       },
@@ -4423,7 +4418,7 @@
           "genuineCheck" : {
             "success" : {
               "title" : "Отлично!",
-              "desc" : "Подлинность вашего {{deviceName}} подтверждена. Теперь вы можете использовать его в Ledger Live."
+              "desc" : "Ваш кошелёк Ledger {{deviceName}} подлинный. Теперь его можно использовать в Ledger Live."
             },
             "buttons" : {
               "next" : "Продолжить",
@@ -5043,7 +5038,7 @@
       "install" : {
         "title" : "Прервать установку приложения?",
         "description" : "При выходе из вкладки «Мой Ledger» установка приложения прервётся. Дождитесь завершения, чтобы установить приложения из очереди.",
-        "stay" : "Подождать"
+        "stay" : "Дождаться"
       },
       "uninstall" : {
         "title" : "Прервать удаление приложения?",
@@ -5053,7 +5048,7 @@
       "update" : {
         "title" : "Прервать обновление приложения?",
         "description" : "При выходе из вкладки «Мой Ledger» обновление приложения прервётся.",
-        "stay" : "Завершить обновления"
+        "stay" : "Дождаться"
       },
       "quit" : "Закрыть «Мой Ledger»"
     },
@@ -5062,8 +5057,8 @@
       "description" : "Удаляйте приложения Bitcoin или Ethereum в последнюю очередь"
     },
     "NetworkDown" : {
-      "title" : "Похоже, не работает Интернет",
-      "description" : "Проверьте подключение к Интернету."
+      "title" : "Похоже, отсутствует подключение",
+      "description" : "Попробуйте проверить подключение к интернету."
     },
     "NoAddressesFound" : {
       "title" : "К сожалению, счета не найдены",
@@ -5356,7 +5351,7 @@
       "description" : "Транзакцию необходимо подписать в течение 30 секунд. Пожалуйста, попробуйте ещё раз."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Не хватает баллов Энергии. Вы можете заплатить комиссию до 50 TRX."
+      "title" : "Не хватает баллов Энергии. Комиссия может достигать 50 TRX."
     },
     "PairingFailed" : {
       "title" : "Не удалось подключить устройство",
@@ -5593,6 +5588,13 @@
       "descriptionWithProductName" : "Сначала {{ productName }} необходимо настроить.\nМы поможем вам с этим.",
       "goToOnboardingButton" : "Настроить устройство",
       "goToOnboardingButtonWithProductName" : "Настроить {{ productName }}"
+    },
+    "EtherscanAPIError" : {
+      "title" : "Сбой при загрузке транзакций",
+      "description" : "Произошла непредвиденная ошибка с обозревателями. Повторите попытку позже"
+    },
+    "GasEstimationError" : {
+      "title" : "Сбой расчёта стоимости Газа"
     }
   },
   "cryptoOrg" : {
